<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AdminUserEdit">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="@drawable/menu_icon"
            app:title="@string/app_name"
            app:titleTextColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_shape"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/aleo"
                    android:text="@string/id_string_caps"
                    android:textColor="@color/faded_text_color"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/aleo"
                    android:text="10020851"
                    android:textColor="@color/text_color"
                    android:textSize="24sp" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/fullname_string"
                android:textColorHint="@color/faded_text_color"
                app:boxBackgroundColor="@color/background_color_variant">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fullname_string"
                    android:textColor="@color/text_color" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/username_string"
                android:textColorHint="@color/faded_text_color"
                app:boxBackgroundColor="@color/background_color_variant">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username_string"
                    android:textColor="@color/text_color" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/email_string"
                android:textColorHint="@color/faded_text_color"
                app:boxBackgroundColor="@color/background_color_variant">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email_string"
                    android:textColor="@color/text_color" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/update_button2"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:backgroundTint="@color/main_color"
                android:fontFamily="@font/aleo"
                android:text="@string/update_string_caps" />

            <Button
                android:id="@+id/update_button3"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:backgroundTint="@color/main_color"
                android:fontFamily="@font/aleo"
                android:text="@string/generate_password_string" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_shape"
                    android:fontFamily="@font/aleo"
                    android:text="@string/safe_switch_string"
                    android:textAlignment="center"
                    android:textColor="@color/text_color"
                    android:thumbTint="@color/main_color"
                    android:trackTint="@color/main_color_variant" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/red"
                    android:fontFamily="@font/aleo"
                    android:text="@string/delete_account_string"
                    android:textColor="@color/text_color" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>